<resources>
    <string name="app_name">ALC4</string>
    <string name="welcome_to_alc_4_0">Welcome To ALC 4.0</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="track_android">Track : Android</string>
    <string name="country_zambia">Country : Zambia</string>
    <string name="email_suwilanjisinyinza_outlook_com">Email : suwilanjisinyinza@outlook.com</string>
    <string name="phone_2609632454">Phone : +2609632454</string>
    <string name="todo">TODO</string>
</resources>
